// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page basic 1`] = `
<div>
  <div
    class="css-1tp04pv"
  >
    <nav
      class="ant-breadcrumb css-yc5e1l"
    >
      <ol>
         
      </ol>
    </nav>
    <div
      class="css-t54a73"
    />
  </div>
</div>
`;

exports[`Page breadcrumb match menu 1`] = `
<div>
  <div
    class="css-1tp04pv"
  >
    <nav
      class="ant-breadcrumb css-yc5e1l"
    >
      <ol>
         
        <li>
          <span
            class="ant-breadcrumb-link"
          >
            <a
              href="/admin"
            >
              首页
            </a>
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </li>
        <li>
          <span
            class="ant-breadcrumb-link"
          >
            <a
              href="/admin/test"
            >
              Test Page
            </a>
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </li>
        <li>
          <span
            class="ant-breadcrumb-link"
          >
            <a
              href="/admin/test/child"
            >
              Child Page
            </a>
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </li>
      </ol>
    </nav>
    <div
      class="css-t54a73"
    />
  </div>
</div>
`;

exports[`Page page with css props 1`] = `
<div>
  <div
    class="css-1tp04pv"
  >
    <nav
      class="ant-breadcrumb css-yc5e1l"
    >
      <ol>
         
      </ol>
    </nav>
    <div
      class="css-x5jnlo"
    />
  </div>
</div>
`;
